--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,6 +1,6 @@
   
-<footer class="container-fluid bgColorPrim mb-0">
-    <div class="row">
+<footer class="container-fluid mb-0">
+    <!-- <div class="row">
       <p class="col-12 text-center sizeIcone"><i class="fab fa-twitter-square"></i>
       <i class="fab fa-facebook-square"></i>
       <i class="fab fa-instagram-square"></i></p>
@@ -9,5 +9,5 @@
       <p class="text-center">Mentions legales</p>
       <p class="text-center">Politiques de traitement des données</p>
       <p class="text-center ">Copyright © juillet-2021 </p>
-    </div>
+    </div> -->
   </footer>
