--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,20 +9,14 @@
                     </button>
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link hoverlink" href="#">Accueil</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Mon profil</a>
-                            </li>
+ 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Opérations
+                                    Mes projets
                                 </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Ouvrir un compte</a></li>
-                                <li><a class="dropdown-item" href="#">Faire un virement</a></li>
-                                <li><a class="dropdown-item" href="#">Supprimer un compte</a></li>
+                                <li><a class="dropdown-item" href="{{ asset('project') }}">Voir tout mes projets</a></li>
+                                <li><a class="dropdown-item" href="{{ asset('/project/new') }}">Créer un nouveau projet</a></li>
                             </ul>
                             </li>
                             <li class="nav-item">
