New Project form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
         {% include 'header.html.twig' %}
         <main>
             <section class="container my-5">
-                <div class="row">
+                <div class="row mx-4">
                     {% block body %}
                     
                     {% endblock %}
