--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Project{% endblock %}
+{% block title %}Nouveau Projet{% endblock %}
 
 {% block body %}
-    <h1>Create new Project</h1>
+    <section>
+        <div class="text-center">
+            <h1 class="mb-5">Créer un nouveau projet</h1>
 
-    {{ include('project/_form.html.twig') }}
-
-    <a href="{{ path('project_index') }}">back to list</a>
+            <div class="col-12 col-md-8 col-lg-6 col-xxl-6 m-auto">
+                {{ include('project/_form.html.twig') }}
+            </div>
+            <a href="{{ path('project_index') }}">Retour à l'Acceuil</a>
+        </div>
+    </section>
 {% endblock %}
