--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,29 +1,38 @@
-
+.colorPrim {
+  background-color: #9BC1BC ;
+}
+.colorSec{
+  background-color: #E6EBE0;
+}
+.colorTer{
+  background-color: #ED6A5A;
+}
 .accordion {
-  border-radius: 0.5em;
-    background-color: #eee;
+    border-radius: 0.5em;
     color: #444;
     cursor: pointer;
     padding: 1em;
-    width: 100%;
     text-align: center;
     border: none;
     outline: none;
     transition: 0.4s;
+    width:100%
   }
-  
   .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: #E6EBE0;
   }
-  
-  
   .panel {
     padding: 0 1em;
     background-color: white;
     display: none;
     overflow: hidden;
   }
-  
   .card{
     border-radius: 0.5em;
+  }
+
+  .form-control{
+    border-color: #9BC1BC;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #9BC1BC;
+
   }
