--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -5,29 +5,35 @@
 {% block body %}
 
     <h1>Mes projets</h1>
-        <button class="btn btn-sm btn-primary w-50 my-3 m-auto" href="{{ path('project_new') }}">Créer un nouveau projet</button>
+        <!-- <button class="btn btn-sm colorSec  w-25 my-3 mx-5" href="{{ path('project_new') }}">Créer un nouveau projet</button> -->
 
+        <div class="row">
         {% for project in projects %}
-
-        <button class="accordion my-1 m-auto w-75">{{ project.title }} / {{ project.category }}</button>
-        <div class="panel card m-auto w-75 text-center">
-            <p>{{ project.client }}</p>
-            <p>{{ project.description }}</p>
-            <p>Date de fin de projet:  {{ project.deadline ? project.deadline|date('Y-m-d H:i:s') : '' }}</p>
-            <a class="btn btn-primary my-1" href="{{ path('project_show', {'id': project.id}) }}">Détails</a>
-            <a class="btn btn-primary my-1" href="{{ path('project_edit', {'id': project.id}) }}">Modifier</a>
-            <button class="accordion my-1">Voir les tâches</button>
-            <div class="panel card my-1">
-                {% for task in project.tasks %}
-                    <p>{{ task.title }} {{ task.description }}</p>
-                    <button>{{ task.state}} </button>
-                {% endfor %}
+        <div class="col-lg-4 col-md-6">
+            <button class="accordion colorPrim my-1 m-auto ">{{ project.title }} / {{ project.category }}</button>
+                <div class="panel card m-auto text-center">
+                    <p>{{ project.client }}</p>
+                    <p>{{ project.description }}</p>
+                    <p>Date de fin de projet:  {{ project.deadline ? project.deadline|date('Y-m-d H:i:s') : '' }}</p>
+                    <a class="btn colorPrim my-1" href="{{ path('project_show', {'id': project.id}) }}">Détails</a>
+                    <a class="btn colorPrim my-1" href="{{ path('project_edit', {'id': project.id}) }}">Modifier</a>
+                    <button class="btn colorPrim btn-sm accordion my-1">Voir les tâches</button>
+                    <div class="panel card my-1">
+                        {% for task in project.tasks %}
+                            <div class="container">
+                                <div class="row">
+                                    <p class="w-25 m-auto">{{ task.title }}</p>
+                                    <button class="w-25 m-auto">{{ task.state }} </button>
+                                </div>
+                            </div>    
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-        </div>
- 
             {% else %}
                 <tr>
                     <td colspan="8">Aucun projets trouvé</td>
                 </tr>
             {% endfor %}
+        </div>
 {% endblock %}
