--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,16 @@
+body{
+  min-height: 100%;
+}
+header{
+  min-height: 15%;
+}
+main{
+  min-height: 70%;
+}
+footer{
+  min-height: 15%;
+}
+
 .colorPrim {
   background-color: #9BC1BC ;
 }
@@ -35,4 +48,8 @@
     border-color: #9BC1BC;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #9BC1BC;
 
+  }
+
+  footer{
+    margin-bottom: 0;
   }
