--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,13 +1,10 @@
   
-<footer class="container-fluid mb-0">
-    <!-- <div class="row">
-      <p class="col-12 text-center sizeIcone"><i class="fab fa-twitter-square"></i>
-      <i class="fab fa-facebook-square"></i>
-      <i class="fab fa-instagram-square"></i></p>
-    </div>
+<footer class="colorPrim">
     <div class="row">
-      <p class="text-center">Mentions legales</p>
-      <p class="text-center">Politiques de traitement des données</p>
-      <p class="text-center ">Copyright © juillet-2021 </p>
-    </div> -->
+      {% if app.user %}
+      <div class="col-4">
+        <p class="text-center">Bonjour {{app.user.firstname}}</p>
+      </div>
+      {% endif %}
+
   </footer>
