--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,4 +1,4 @@
-<header class="bgColorPrim">
+<header class="ColorPrim">
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"/>
