--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -10,7 +10,7 @@
             <div class="col-12 col-md-8 col-lg-6 col-xxl-6 m-auto">
                 {{ include('project/_form.html.twig') }}
             </div>
-            <a href="{{ path('project_index') }}">Retour à l'Acceuil</a>
+            <a class="btn colorPrim" href="{{ path('project_index') }}">Retour à l'Acceuil</a>
         </div>
     </section>
 {% endblock %}
