--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,17 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}S'inscrire{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <section>
+        <div class="col-12 col-md-8 col-lg-6 col-xxl-6 m-auto">
+            <h1>S'inscrire</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.firstname)}}
+                {{ form_row(registrationForm.lastname)}}
+                {{ form_row(registrationForm.email) }}
+                {{ form_row(registrationForm.plainPassword, {
+                    label: 'Mot de passe'
+                }) }}
+                {{ form_row(registrationForm.birthdate)}}
+                {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                <button class="btn colorPrim" type="submit" >Enregistrer</button>
+            {{ form_end(registrationForm) }}
+
+            <a class="btn colorPrim" href="../login">Accueil</a>
+        </div>
+    </section>
+        
+        
 {% endblock %}
