--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"/>
             <!-- <img class="onlyMobile" src="logo96x96.png" alt="logo de la banque"> -->
-            <img class ="logo" src="{{ asset('img/logo200x200.png') }}" alt="Logo"></a>
+            <img class ="logo" src="{{ asset('img/logo.png') }}" alt="Logo"></a>
             <button class="navbar-toggler btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon btn-sm"></span>
             </button>
