--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -2,9 +2,13 @@
 <footer class="colorPrim">
     <div class="row">
       {% if app.user %}
-      <div class="col-4">
+      <div class="card colorSec col-8 col-lg-3 mx-auto my-4 text-center">
         <p class="text-center">Bonjour {{app.user.firstname}}</p>
       </div>
       {% endif %}
+      <div class="card colorSec col-8 col-lg-3 mx-auto my-4 text-center">
+         <div id="date"></div>
+         <div id="hours"></div>
+      </div>
 
   </footer>
