--- a/templates/project/_delete_form.html.twig
+++ b/templates/project/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('project_delete', {'id': project.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce projet?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
-    <button class="btn colorTer w-25">Supprimer le projet</button>
+    <button class="btn colorTer ">Supprimer le projet</button>
 </form>
