--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -19,7 +19,7 @@
         <div class="col-lg-4 col-md-6">
             <button class="accordion colorPrim my-1 m-auto ">{{ project.title }}</br>
                     <div class="colorSec card">
-                        Reste: {{project.date.diff(project.deadline)|date("%M")}} mois et {{project.date.diff(project.deadline)|date("%D")}} jours
+                        Reste: {{project.date.diff(project.deadline)|date("%Y")}} ans, {{project.date.diff(project.deadline)|date("%M")}} mois et {{project.date.diff(project.deadline)|date("%D")}} jours
                     </div>
             </button>
                 <div class="panel card m-auto text-center">
