fix Task edit form

--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -8,7 +8,7 @@
         
         
         {% for message in app.flashes('success') %}
-            <div class="flash-notice">
+            <div class="flash-notice alert-success py-5 col-6 my-3">
                 {{ message }}
             </div>
         {% endfor %}
