--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -33,9 +33,19 @@
                         <tr>
                             <td>{{ task.title }}</td>
                             <td>{{ task.description }}</td>
-                            <td>{{ task.state}}</td>
+                            <td> {% if task.state == true %}
+                                    <p class="card bg-success col-8 m-auto my-1 text-center">Terminée</p>
+                                {% else %}
+                                <p class="card colorTer col-8 m-auto text-center">En cours</p>
+                                {% endif %}
+                           </td>
                             <td><a class="btn colorPrim w-50" href="{{ path('task_edit', {'id': task.id}) }}">Modifier la tâche</a></td>
-                            <td><button class="btn colorPrim">Terminée?</button></td>
+                            <td>
+                                    <form method="post" action="{{ path('task_state', { id:task.id }) }}">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('state' ~ task.id) }}">
+                                    <button type="submit" class="btn colorPrim my-1">Finir</button>
+                                    </form>
+                                </td>
                         </tr>
                         {% else %}
                         <p>Pas de tâches ajoutées</p>
