--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Task{% endblock %}
 
 {% block body %}
-    <h1>Edit Task</h1>
 
-    {{ include('task/_form.html.twig', {'button_label': 'Update'}) }}
+    <h1>Modifier tâche</h1>
+    <div class="text-center">
+        {{ include('task/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('task_index') }}">back to list</a>
+        <a class="btn colorPrim my-2" href="{{ path('project_index') }}">Retour à l'accueil</a>
 
-    {{ include('task/_delete_form.html.twig') }}
+        {{ include('task/_delete_form.html.twig') }}
+
+    </div>
+
+
+ 
 {% endblock %}
